--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,8 +17,18 @@
         android:theme="@style/Theme.MediLabMemberApp"
         tools:targetApi="31">
         <activity
-            android:name=".MyCart"
+            android:name=".CheckOutStep2"
             android:exported="false" />
+        <activity
+            android:name=".DependantsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CheckOutStep1"
+            android:exported="false" />
+        <activity
+            android:name=".MyCart"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight" />
         <activity
             android:name=".SingleLabTest"
             android:exported="false" />
@@ -28,7 +40,8 @@
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
